auto ocr when page switched

--- a/TODO
+++ b/TODO
@@ -1,1 +1,12 @@
 在工具栏，新增一个按钮“文字提取”，点击按钮可以将阅读界面一分为二，左右的比例由用户自行拖动分割条来调整，并持久化存储。左边依然是pdf页面，而右边为当前pdf页面经过OCR扫描得到的文字。右边有一个按钮，打开设置页面，选择OCR扫描的引擎，目前使用支持vision的大模型，使用openai compatible api，因此设置页面需要填写endpoint, apikey, model，并持久化存储
+
+===
+
+增加一个功能，翻页的时候自动触发ocr，注意需要等canvas完成渲染再触发ocr，同时，如果上一个ocr请求还没收到回应，请通知服务器终止处理上一个请求
+
+===
+
+翻页的时候若ocr面板是打开状态则自动开始ocr。开始ocr之前，先检查是否有扫描结果的缓存，若有，则直接加载缓存。
+同时，使用10MB的空间，持久化存储ocr结果，同一md5的pdf文件、同一页码对应一个ocr结果。若缓存超出限制，则从最老的结果开始删除，直到缓存在10MB之内。这个数值做成配置文件，编译的时候可配置。
+
+===
