store last opened file

--- a/TODO
+++ b/TODO
@@ -10,3 +10,5 @@
 同时，使用10MB的空间，持久化存储ocr结果，同一md5的pdf文件、同一页码对应一个ocr结果。若缓存超出限制，则从最老的结果开始删除，直到缓存在10MB之内。这个数值做成配置文件，编译的时候可配置。
 
 ===
+
+使用持久化存储，储存当前打开的文件名和当前所在的页码和文本提取选项卡是否打开。程序启动的时候，如有上次保存的状态，则自动回到上次的状态
