refactor content function, extract it from app.tsx

--- a/TODO
+++ b/TODO
@@ -12,3 +12,6 @@
 ===
 
 使用持久化存储，储存当前打开的文件名和当前所在的页码和文本提取选项卡是否打开。程序启动的时候，如有上次保存的状态，则自动回到上次的状态
+
+两个需求：1对于每个目录标题，在右侧显示对应的页码。2在目录展开时，目录的定位，尽量使得当前正在浏览的章节的目录标     │
+│   题在第一行，并且当前的章节以强调色显示
