fix macos system ocr bug: when llm settings are not set, cannot call system ocr api

--- a/TODO
+++ b/TODO
@@ -1,17 +1,9 @@
-在工具栏，新增一个按钮“文字提取”，点击按钮可以将阅读界面一分为二，左右的比例由用户自行拖动分割条来调整，并持久化存储。左边依然是pdf页面，而右边为当前pdf页面经过OCR扫描得到的文字。右边有一个按钮，打开设置页面，选择OCR扫描的引擎，目前使用支持vision的大模型，使用openai compatible api，因此设置页面需要填写endpoint, apikey, model，并持久化存储
+已知bug：
+1. 当设定了ocr使用system时，无法切换llm设置
+2. 缓存中的md5实际上没有生效，经检查，缓存key里所有的md5都没有变化过
 
-===
-
-增加一个功能，翻页的时候自动触发ocr，注意需要等canvas完成渲染再触发ocr，同时，如果上一个ocr请求还没收到回应，请通知服务器终止处理上一个请求
-
-===
-
-翻页的时候若ocr面板是打开状态则自动开始ocr。开始ocr之前，先检查是否有扫描结果的缓存，若有，则直接加载缓存。
-同时，使用10MB的空间，持久化存储ocr结果，同一md5的pdf文件、同一页码对应一个ocr结果。若缓存超出限制，则从最老的结果开始删除，直到缓存在10MB之内。这个数值做成配置文件，编译的时候可配置。
-
-===
-
-使用持久化存储，储存当前打开的文件名和当前所在的页码和文本提取选项卡是否打开。程序启动的时候，如有上次保存的状态，则自动回到上次的状态
-
-两个需求：1对于每个目录标题，在右侧显示对应的页码。2在目录展开时，目录的定位，尽量使得当前正在浏览的章节的目录标     │
-│   题在第一行，并且当前的章节以强调色显示
+还需增加的功能：
+1. 分栏可拖动
+2. 竖排日语的ocr
+3. 增加第三种ocr引擎：tessart
+4. tts功能
