calculate md5 while reading pdf file, improve performance

--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
-已知bug：
-1. 当设定了ocr使用system时，无法切换llm设置
-2. 缓存中的md5实际上没有生效，经检查，缓存key里所有的md5都没有变化过
+在自动ocr或者自动翻译钩上时，自动预处理下一页的内容，处理完毕后，放入缓存。我们将这个处理过程称为预翻译。
+注意，App.tsx:174有离屏渲染的逻辑，在这里可以复用。
 
-还需增加的功能：
-1. 分栏可拖动
-2. 竖排日语的ocr
-3. 增加第三种ocr引擎：tessart
-4. tts功能
-5. 提前ocr和翻译
+大概流程是：
+在当前页面的翻译ocr完成后，若自动ocr或者自动翻译钩上，则离屏渲染下一页，然后触发翻译ocr，完成后将结果存入缓存。
+用户翻页时，若预翻译还未完成，则：
+1. 若用户翻到了预ocr翻译正在处理的页面，则不要停止预ocr翻译，展示最新的结果，如果可以的话，流式输出ocr结果或者llm翻译结果。工作完成以后继续预翻译下一页
+2. 若用户翻到的页面不是正在预翻译的页面，则立刻停止预ocr翻译，ocr翻译用户正在阅读的页面
+
+注意如果预ocr翻译完成了，则结果已经被存入ocr翻译缓存中，所以不需要额外处理
